kubernetes/developer/woodpecker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: woodpecker-webhook
  namespace: developer
spec:
  ingressClassName: traefik
  rules:
    - host: ci.chamburr.xyz
      http:
        paths:
          - path: /api/hook
            pathType: Prefix
            backend:
              service:
                name: woodpecker
                port:
                  number: 8000
